2011-04-22  Levi Weintraub  <leviw@chromium.org>

Reviewed by Ryosuke Niwa.

        End/Home keys do not work in a contentEditable element
        https://bugs.webkit.org/show_bug.cgi?id=50564

        Fixing modifying selection by lineboundary (home/end) for editable contexts that are
        inline and share a line with non-editable content.

        * editing/selection/modify-by-lineboundary-in-inline-editable-contexts-expected.txt: Added.
        * editing/selection/modify-by-lineboundary-in-inline-editable-contexts.html: Added.
        * editing/selection/script-tests/modify-by-lineboundary-in-inline-editable-contexts.js: Added.
        (testModifyByLine):
2011-04-22  Levi Weintraub  <leviw@chromium.org>

        Reviewed by Ryosuke Niwa.

        End/Home keys do not work in a contentEditable element
        https://bugs.webkit.org/show_bug.cgi?id=50564

        Changing logical[Start/End]OfLine to return a valid VisiblePosition for for editable contexts that are
        inline and share a line with non-editable content.

        Test: editing/selection/modify-by-lineboundary-in-inline-editable-contexts.html

        * editing/visible_units.cpp:
        (WebCore::logicalStartOfLine):
        (WebCore::logicalEndOfLine):


Canonical link: https://commits.webkit.org/74408@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@84678 268f45cc-cd09-0410-ab3c-d52691b4dbfc